--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ playground.xcworkspace
 
 .build/
 
+# CocoaPods:
+Pods/
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
